--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
   <link href="https://framework-gb.cdn.gob.mx/gm/v4/css/main.css" rel="stylesheet">
   <link href="https://framework-gb.cdn.gob.mx/gm/accesibilidad/css/gobmx-accesibilidad.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"  href="assets/css/senasica.css">
 </head>
 <body>
   <app-root></app-root>
